--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,40 @@
 @import "bootstrap";
+
+body{
+	background-color: #F5F5F1;
+	color: #333333;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar-default {
+	background-color: #EFEFEB;
+}
+
+.navbar-default .navbar-brand {
+	font-family: guardian-egyptt, georgia, serif;
+	font-weight: 400;
+	color: #D5641C;
+	font-size: 30px;
+}
+
+.navbar-default .navbar-nav> li > a {
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	color: #0192B5;
+	font-size: 14px;
+}
+
+.center {
+	text-align: center;
+}
+
+/*making sure 5th,9th,13th,etc to display on left side*/
+.col-md-3:nth-child(4n+1){
+	clear: left;
+}
+
+.col-md-6 {
+	h3 {font-size: 45px;}
+	h5 {font-size: 25px;}
+	p {font-size: 18px;}
+}
