--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -2,7 +2,7 @@
 <h1>Editing Listing</h1>
 
 <h1 align ="center"> Edit exisiting listing</h1>
-<form action ="/listings/<%=@listing.id%>" method ="post" >
+<form action ="/listings/<%=@listing.id%>" method ="post" enctype="multipart/form-data">
 	<input type ="hidden" name ="authenticity_token" value="<%= form_authenticity_token %>">
 	<input type ="hidden" name ="_method" value ="patch">
 	<div class="form-group row">
@@ -21,6 +21,12 @@
 		<label class ="col-sm-2 form-control-label"> Price </label>
 		<div class = "col-sm-10">
 			<input type ="text" class ="form-control" name ="listing[price]" value ="<%=@listing.price %>">
+		</div>
+	</div>
+	<div class="form-group row">
+		<label class ="col-sm-2 form-control-label"> Image </label>
+		<div class ="col-sm-10">
+			<input type ="file" class ="form-control" name ="listing[image]" value ="<%=@listing.image %>">
 		</div>
 	</div>
 	<div class ="form-group row">
