--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,6 +1,9 @@
 <!-- partial for messages -->
 <%flash.each do |name, msg| %>
-	<ul>
-		<li><%=msg%></li>
-	</ul>
-	<%end%>
+	<% if msg.is_a?(String) %>
+      <div class="alert alert-<%= name == :notice ? "success" : "danger" %> alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      </div>
+    <% end %>
+<%end%>
