--- a/app/views/layouts/_navibar.html.erb
+++ b/app/views/layouts/_navibar.html.erb
@@ -15,13 +15,19 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href ="/pages/about"> About </a></li>
-        <li><a href ="/pages/contact">Contact</a></li>   
+        <li><%= link_to "About", pages_about_path %> </li>
+        <li><%= link_to "Contact", pages_contact_path %> </li>
       </ul>
     
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul> -->
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to "Edit Account", edit_user_registration_path %> </li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
+        <% else %>
+          <li><%= link_to "Sign up", new_user_registration_path %> </li>  
+          <li><%= link_to "Login", new_user_session_path %> </li>
+        <% end %>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
