--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,15 @@
 
   <div class ="form-group">
     <div class="field">
+      <%= f.label :name %>
+      <%= f.text_field :name, autofocus: true, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class ="form-group">
+    <div class="field">
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      <%= f.email_field :email, autofocus: "off", class: "form-control" %>
     </div>
   </div>
 
