added validations to users and listings

--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,9 +1,11 @@
 <!-- partial for messages -->
-<%flash.each do |name, msg| %>
-	<% if msg.is_a?(String) %>
-      <div class="alert alert-<%= name == :notice ? "success" : "danger" %> alert-dismissable">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      </div>
-    <% end %>
-<%end%>
+<% flash.each do |name, msg| %>
+  <div class="alert alert-<%= name %>">
+    <a href="#" data-dismiss="alert" class="close">×</a>
+    <ul>
+      <li>
+        <%= msg %>
+      </li>
+    </ul>
+  </div>
+<% end %>
