--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,6 +1,21 @@
 <h1 align ="center"> New Listing </h1>
+
+
 <form action ="/listings" method ="post" id ="article[id]" enctype="multipart/form-data">
 	<input type ="hidden" name ="authenticity_token" value="<%= form_authenticity_token %>">
+	<% if @listing.errors.any? %>
+    <div id="error_explanation" class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <h4><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h4>
+
+      <ul>
+      <% @listing.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
 	<div class="form-group row">
 		<label class ="col-sm-2 form-control-label"> Name </label>
 		<div class = "col-sm-10">
