linked banner img to dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,7 +40,7 @@ body{
 }
 
 .jumbotron {
-	background-image: url('jumbotron.jpeg') ;
+	background-image: url('https://www.dropbox.com/s/g11kc4z6esd1xpu/jumbotron.jpeg?raw=1') ;
 	background-size: 100% 100%;
 	h1, h2 {
 		font-family: guardian-egyptt, georgia, serif;
