--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,7 +1,7 @@
 <h1 align ="center"> New Listing </h1>
 
 
-<form action ="/listings" method ="post" id ="article[id]" enctype="multipart/form-data">
+<form action ="/listings" method ="post" enctype="multipart/form-data">
 	<input type ="hidden" name ="authenticity_token" value="<%= form_authenticity_token %>">
 	<% if @listing.errors.any? %>
     <div id="error_explanation" class="alert alert-danger alert-dismissable">
