--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,14 +1,17 @@
 <div class ="row">
 	<div class ="col-md-6">
 		<div class="thumbnail">
-		<%= image_tag @listing.image.url %>
-	</div>
+			<%= image_tag @listing.image.url %>
+		</div>
 	</div>
 	<div class ="col-md-6">
 		<h3><%= @listing.name %></h3>
 		<p><%= number_to_currency(@listing.price) %></p>
 		<p><%= @listing.description %></p>
-
+		<br>
+		<div class = "center">
+			<%= link_to "Buy", new_listing_order_path(@listing), class: "btn btn-primary" %>
+		</div>
 	</div>
 </div>
 
