--- a/app/views/layouts/_navibar.html.erb
+++ b/app/views/layouts/_navibar.html.erb
@@ -21,6 +21,8 @@
     
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+          <li><%= link_to "Sales History", sales_path %> </li>
+          <li><%= link_to "Purchase History", purchases_path %> </li>
           <li><%= link_to "Manage Listings", seller_path %> </li>
           <li><%= link_to "Edit Account", edit_user_registration_path %> </li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
