--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -20,5 +20,5 @@
 </div>
 <br>
 <% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary" %>
 <% end %>
